<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/visitor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visitor_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/visitor_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visitorEmail"
            android:inputType="textEmailAddress"/>

        <Spinner
            android:id="@+id/employee_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:hint="@string/employee"/>

        <EditText
            android:id="@+id/visit_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/visit_purpose"
            android:inputType="text"/>

        <Button
            android:id="@+id/visitor_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>