<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="12dp">


        <LinearLayout
            android:id="@+id/add_employee_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:id="@+id/addEmployee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_employee"
                android:focusable="true"
                android:clickable="true"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"/>
            <!--Hidden/expandable content for adding employee to database -->
            <RelativeLayout
                android:id="@+id/add_employee_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <EditText
                    android:id="@+id/employeeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_name"
                    android:importantForAutofill="no"
                    android:inputType="text"/>
                <EditText
                    android:id="@+id/employeeEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/employeeName"
                    android:hint="@string/employee_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"/>
                <Button
                    android:id="@+id/saveEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/employeeEmail"
                    android:text="@string/submit" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
        android:id="@+id/end_of_day_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
            <Button
                android:id="@+id/exportButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text ="Export"
                android:textSize="22sp"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>

</LinearLayout>